# geo

./: .gitignore  CMakeLists.txt
docs/: Doxyfile
include/: bspline.h  curve.h  curve_factory.h  entity.h  float_utils.h  geometry.h  line.h  linear_algebra.h  matrix.h  plane.h  segment.h  world.h
src/: bspline.cpp  line.cpp  linear_algebra.cpp  matrix.cpp
test_include/: test_assertion_traits.h  test_bspline.h  test_line.h  test_linear_algebra.h  test_matrix.h
test_src/: test_bspline.cpp  test_line.cpp  test_linear_algebra.cpp  test_matrix.cpp  testgeo.cpp
